tests/badly_positioned_func_sig/badly_positioned_func_sig.exp
Error ---------------------------------------------------------------------------------------------------- test.js:11:29

Cannot initialize property `foo` with object literal because string [1] is incompatible with number [2] in property
`bar`.

   test.js:11:29
   11|   foo: {|bar: Bar|} = {bar: 'cat'};
                                   ^^^^^ [1]

References:
   test.js:11:15
   11|   foo: {|bar: Bar|} = {bar: 'cat'};
                     ^^^ [2]



Found 1 error
